--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hpyer/aliyun-sts",
+    "name": "luc/aliyun-sts",
     "description": "Aliyun-STS SDK",
     "keywords": ["aliyun", "sts", "oss"],
     "homepage": "http://github.com/hpyer/aliyun-sts",
