--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Hpyer",
-            "email": "me@hpyer.cn",
-            "homepage": "http://hpyer.cn"
+            "name": "luc",
+            "email": "xxxx@hpyer.cn",
+            "homepage": "http://xxx.cn"
         }
     ],
     "require": {
