--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "authors": [
         {
             "name": "luc",
-            "email": "xxxx@hpyer.cn",
-            "homepage": "http://xxx.cn"
+            "email": "luc_anko@foxmail.com",
+            "homepage": "http://lf1974.com"
         }
     ],
     "require": {
